--- a/package.json
+++ b/package.json
@@ -15,13 +15,13 @@
     "autoprefixer": "^10.4.14",
     "bcrypt": "^5.1.0",
     "eslint": "8.43.0",
-    "eslint-config-next": "13.4.6",
+    "eslint-config-next": "^14.0.0",
     "mongoose": "^7.3.2",
-    "next": "^13.4.9",
+    "next": "^14.0.0",
     "next-auth": "^4.22.1",
     "postcss": "^8.4.24",
-    "react": "18.2.0",
-    "react-dom": "18.2.0",
+    "react": "^18.2.0",
+    "react-dom": "^18.2.0",
     "tailwindcss": "^3.3.2",
     "typescript": "5.1.3"
   },
