--- a/package.json
+++ b/package.json
@@ -9,21 +9,35 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@hookform/resolvers": "^3.3.2",
+    "@radix-ui/react-dropdown-menu": "^2.0.6",
+    "@radix-ui/react-label": "^2.0.2",
+    "@radix-ui/react-slot": "^1.0.2",
     "@types/node": "20.3.1",
     "@types/react": "18.2.13",
     "@types/react-dom": "18.2.6",
     "autoprefixer": "^10.4.14",
     "bcrypt": "^5.1.0",
+    "class-variance-authority": "^0.7.0",
+    "clsx": "^2.0.0",
+    "dropdown-menu": "^0.1.1",
     "eslint": "8.43.0",
     "eslint-config-next": "^14.0.0",
+    "lucide-react": "^0.292.0",
     "mongoose": "^7.3.2",
-    "next": "^14.0.0",
+    "next": "14.0.1",
     "next-auth": "^4.22.1",
+    "next-themes": "^0.2.1",
     "postcss": "^8.4.24",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
+    "react-hook-form": "^7.48.2",
+    "shadcn-ui": "^0.4.1",
+    "tailwind-merge": "^2.0.0",
     "tailwindcss": "^3.3.2",
-    "typescript": "5.1.3"
+    "tailwindcss-animate": "^1.0.7",
+    "typescript": "5.1.3",
+    "zod": "^3.22.4"
   },
   "devDependencies": {
     "@types/bcrypt": "^5.0.0"
